<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main_activity_container"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleMarginBottom="28dp"
            app:collapsedTitleTextAppearance="@style/AppTheme.NavBar.Collapsed"
            app:expandedTitleTextAppearance="@style/AppTheme.NavBar.Expanded"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/header"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/main_menu_background_description"
                />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:title="@string/app_name"

                style="@style/AppTheme.NavBar"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_form_field_salario_bruto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:startIconDrawable="@drawable/payments_24px"
                app:helperText="@string/main_form_input_salario_bruto_hint"
                android:hint="@string/main_form_input_salario_bruto_label"
                android:theme="@style/AppTheme.Inputs">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_form_input_salario_bruto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@string/main_form_input_salario_bruto_label"
                    android:maxLines="1"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_form_field_dependentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:helperText="@string/main_form_input_dependentes_hint"
                android:hint="@string/main_form_input_dependentes_label"
                android:theme="@style/AppTheme.Inputs"
                app:startIconDrawable="@drawable/group_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_form_input_dependentes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@string/main_form_input_dependentes_label"
                    android:maxLines="1"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_form_field_descontos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:helperText="@string/main_form_input_descontos_hint"
                android:hint="@string/main_form_input_descontos_label"
                android:theme="@style/AppTheme.Inputs"
                app:startIconDrawable="@drawable/trending_down_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@string/main_form_input_descontos_label"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:id="@+id/main_form_input_descontos"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/main_form_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_form_input_submit" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>