<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/result_activity_container"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".views.ResultadoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            android:background="@android:color/transparent"
            app:layout_collapseMode="pin"
            app:title="@string/result_title"

            app:navigationIcon="@drawable/arrow_back_24px"
            style="@style/AppTheme.NavBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/result_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:contentDescription="@string/result_banner_description"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/banner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title expansible bar -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_card_memoria_de_calculo"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <!-- divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:background="?android:attr/listDivider" />

                    <!-- Salário Bruto -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/result_label_salario_bruto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/result_card_salario_bruto"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/result_value_salario_bruto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/text_primary"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/result_label_salario_bruto"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- INSS -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/result_label_inss"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/result_card_inss"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/result_value_inss"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/text_bad"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/result_label_inss"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- IRRF -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/result_label_irrf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/result_card_irrf"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/result_value_irrf"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/text_bad"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/result_label_irrf"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Outros Descontos -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/result_label_outros_descontos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/result_card_outros_descontos"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/result_value_outros_descontos"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/text_bad"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/result_label_outros_descontos"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result_card_salario_liquido"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/result_value_salario_liquido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/text_good" />

                    <!-- divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result_card_total_descontos"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/result_value_total_descontos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewStart"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/text_bad" />

                        <TextView
                            android:id="@+id/result_value_percentil_descontos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:textAlignment="viewStart"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/text_bad" />

                    </LinearLayout>

                    <!-- divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result_card_legal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?android:attr/textColorSecondary" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>